Edited identation and solved overflow of the page

--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,42 @@
-html,body,article {
+
+body,
+article {
 	box-sizing: border-box;
 }
+
 body {
     background-color: rgb(7, 27, 35);
     font-family: 'Kaushan Script', cursive; 
 }
+
+header {
+    margin-top: 15px;
+    display:flex;
+}
+
+footer {
+    margin-top: 5px;
+}
 .page-content {
     background-color: white;
 }
+
+
 .header-container {
     margin-top: 20px;
     margin-left: 0px;
     margin-right: 0px;
     display: flex;
 }
+
+
 .project-section {
     max-width: 100%;
 }
+
+
 hr {
-    margin-bottom: 15px ;
+    margin-bottom: 20px ;
     border: 2px solid rgba(210, 234, 239, 0.88);
     }
 
@@ -27,37 +45,50 @@ hr {
 ul li {
     font-size: 40px;
 }
+
+
 .facebook-color:hover {
     padding-bottom: 2px;
     color:#3b5998;
     text-decoration: underline;
     font-size:60px;
 }
+
+
 .google-color:hover {
     color:#dd4b39;
     text-decoration: underline;
     font-size: 60px;
 }
+
+
 .twitter-color:hover {
     color: #1da1f2;
     text-decoration: underline;
     font-size: 60px;
 }
+
+
 .git-color:hover {
     color: #d25a08;
     text-decoration: underline;
     font-size:60px;
 
 }
+
+
 .linkedin-color:hover {
   color: #007bb5;
   text-decoration: underline;
   font-size: 60px;
-
 }
+
+
 .footer-elements {
     display: flex;
 }
+
+
 /*styling company name*/
 .company-name {
     color: #02b3e4;
@@ -66,35 +97,50 @@ ul li {
     margin-bottom: 5px;
     margin-top: -10px;
     font-size: 1.5em;
-
 }
+
+
 .job {
     margin-top: 15px;
 }
+
+
 .project-name {
     margin-bottom: -2px;
 }
+
+
 /*name and job*/
-.info{
+.info {
     color: rgb(2, 179, 228);
     font-weight: bolder;
     margin-left: auto;
-    }
+    box-sizing:content-box;
+}
+
+
 /*Udacity logo*/
 .logo {
  	margin-top: 20px;
  	width: 100px;
  	height: 100px;
- }
+}
  @media screen and (max-width: 500px)
-    {
-    	.main-image {
-        	display: none;
-		}
-		hr {
-    		margin-bottom: -10px;
-    		margin-top: 0px;
-		}
+    {  
+         /*In bootstrab styling ".col-md-6" set paddding
+            left and right value t0 15 when screen sizes in small
+            so I changed it here to overcome page overflow */
+		.col-md-6 {
+            padding-left: 0px;
+            padding-right: 0px;
+        }
+        .info {
+            margin: auto;
+
+        }
+        .logo-container {
+            margin-left: 5px;
+        }
 }
 @media screen and (min-width: 501px) and (max-width: 800px) { 
 
